# agentive-ai

./: README.md
crewai/presales_prep/: README.md  presales.py  pyproject.toml  requirements.txt  solution.md
crewai/presales_prep/src/: presales.py
crewai/presales_prep/src/presales_prep/: crew.py  main.py
crewai/presales_prep/src/presales_prep/config/: agents.yaml  tasks.yaml
