[tool.poetry]
name = "presales_prep"
version = "0.1.0"
description = "presales-prep using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
presales_prep = "presales_prep.main:run"
run_crew = "presales_prep.main:run"
train = "presales_prep.main:train"
replay = "presales_prep.main:replay"
test = "presales_prep.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
